--- a/rabies_model.qmd
+++ b/rabies_model.qmd
@@ -16,7 +16,7 @@ We aimed to answer the following question:
 
 This model describes a deterministic compartmental model with the following compartments:
 
--   Susceptible - number of susceptibles dogs in the population
+-   Susceptible - number of susceptible dogs in the population
 
 -   Exposed - number of exposed dogs in the population
 
@@ -162,9 +162,6 @@ ggplot(ts.seiv1, aes(x=calyear, y=Ntot))+ geom_line( color="blue")+theme_bw()+ge
 
 ```
 
-```         
-```
-
 ```{r, echo=F}
 
 # This code creates a loop over different levels of vaccination coverage to estimate:
@@ -262,6 +259,7 @@ seiv <- function(times,y,parms){
   
      dS <- birth_rate*(S+V) - natural_mortality* (1+N/carrying_capacity) * S - immunization_rate * S - lambda * S + loss_immunity * V  # We assume that mortality increases with increasing population size
     dE <- lambda * S - natural_mortality* (1+N/carrying_capacity) * E  - progression_rate * E
+    # dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I - culling_rate * I
     dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I
     dV <- immunization_rate * S - natural_mortality* (1+N/carrying_capacity) * V - loss_immunity * V
    
@@ -409,7 +407,8 @@ seiv <- function(times,y,parms){
   
      dS <- birth_rate*(S+V) - natural_mortality* (1+N/carrying_capacity) * S - immunization_rate * S - lambda * S + loss_immunity * V  # We assume that mortality increases with increasing population size
     dE <- lambda * S - natural_mortality* (1+N/carrying_capacity) * E  - progression_rate * E
-    dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I
+    # dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I - culling_rate * I
+    dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I 
     dV <- immunization_rate * S - natural_mortality* (1+N/carrying_capacity) * V - loss_immunity * V
    
     return(list(c(dS, dE, dI, dV)))
@@ -436,8 +435,9 @@ values <- c(beta = 0.4,
             carrying_capacity=300000, # carrying capacity
             loss_immunity=1/(3*365),
             type=3, #1=annual waves, 2=annual coverage, 3=combined
-            period_waves=100
-            ) # loss of immunity from vaccination over time
+            period_waves=100,
+             # loss of immunity from vaccination over time
+            culling_rate = 0.5)
    
 times <- seq(0,(365*20),1)  # the model will run for a total of 20 years 
 
@@ -572,6 +572,7 @@ seiv <- function(times,y,parms){
      dS <- birth_rate*(S+V) - natural_mortality* (1+N/carrying_capacity) * S - immunization_rate * S - lambda * S + loss_immunity * V  # We assume that mortality increases with increasing population size
     dE <- lambda * S - natural_mortality* (1+N/carrying_capacity) * E  - progression_rate * E
     dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I
+    # dI <- importation_rate + progression_rate * E - natural_mortality* (1+N/carrying_capacity) * I - rabies_mortality * I - culling rate
     dV <- immunization_rate * S - natural_mortality* (1+N/carrying_capacity) * V - loss_immunity * V
    
     return(list(c(dS, dE, dI, dV)))
